--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,17 +1,17 @@
-name: Waka Readme
+#name: Waka Readme
 
-on:
+#on:
   # for manual workflow trigger
-  workflow_dispatch:
-  schedule:
+ # workflow_dispatch:
+  #schedule:
     # runs at 12 AM UTC (5:30 AM IST)
-    - cron: "0 0 * * *"
+   # - cron: "0 0 * * *"
 
-jobs:
-  update-readme:
-    name: WakaReadme DevMetrics
-    runs-on: ubuntu-latest
-    steps:
-      - uses: athul/waka-readme@master
-        with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+#jobs:
+ # update-readme:
+  #  name: WakaReadme DevMetrics
+   # runs-on: ubuntu-latest
+    #steps:
+     # - uses: athul/waka-readme@master
+      #  with:
+       #   WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
